--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
+    "better-scroll": "^1.13.2",
+    "fastclick": "^1.0.6",
+    "jsonp": "^0.2.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -21,6 +25,7 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
